fix: about-us section images, whitespace when resizing screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,7 +843,7 @@ footer {
     #about-us img {
         display: block;
         width: 33%;
-        height: 400px;
+        height: 500px;
         object-fit: cover;
     }
 
